chart layout shift fix

--- a/app/assets/stylesheets/new/_widget.sass
+++ b/app/assets/stylesheets/new/_widget.sass
@@ -20,12 +20,13 @@
     border-radius: 2rem
     box-shadow: var(--widget-shadow)
     &__placeholder
-        width: 80%
-        height: 100%
+        // width: 80%
+        // height: 100%
+        aspect-ratio: 10 / 3
         align-self: center
         justify-self: center
         opacity: 0.2
-        padding-top: 3rem
+        // padding-top: 3rem
         padding-bottom: 5rem
     p
         b
